[tool.poetry]
name = "policy-editor-docs"
version = "0.1.0"
description = "This documentation explains how to use the Policy manager API and what it does"
authors = ["r-scheele <abdulrahmanolamilekan88@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
mkdocs-material = "^8.5.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
